; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_name_cache.c_attr_cmp.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_name_cache.c_attr_cmp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.attr_cache_entry = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @attr_cmp(%struct.attr_cache_entry* %0, %struct.attr_cache_entry* %1) #0 {
  %3 = alloca %struct.attr_cache_entry*, align 8
  %4 = alloca %struct.attr_cache_entry*, align 8
  store %struct.attr_cache_entry* %0, %struct.attr_cache_entry** %3, align 8
  store %struct.attr_cache_entry* %1, %struct.attr_cache_entry** %4, align 8
  %5 = load %struct.attr_cache_entry*, %struct.attr_cache_entry** %3, align 8
  %6 = getelementptr inbounds %struct.attr_cache_entry, %struct.attr_cache_entry* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.attr_cache_entry*, %struct.attr_cache_entry** %4, align 8
  %9 = getelementptr inbounds %struct.attr_cache_entry, %struct.attr_cache_entry* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp slt i64 %7, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  br label %22

13:                                               ; preds = %2
  %14 = load %struct.attr_cache_entry*, %struct.attr_cache_entry** %3, align 8
  %15 = getelementptr inbounds %struct.attr_cache_entry, %struct.attr_cache_entry* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.attr_cache_entry*, %struct.attr_cache_entry** %4, align 8
  %18 = getelementptr inbounds %struct.attr_cache_entry, %struct.attr_cache_entry* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp sgt i64 %16, %19
  %21 = zext i1 %20 to i32
  br label %22

22:                                               ; preds = %13, %12
  %23 = phi i32 [ -1, %12 ], [ %21, %13 ]
  ret i32 %23
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
